--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,24 @@
     <title>Teams Networking</title>
   </head>
   <body>
-    <h1>Teams Networking</h1>
+    <header>
+      <div id="header-wrapper">
+        <div>
+          <img src="images/Networking Team Icon.png" alt="" width="100" height="100" >
+        </div>
+      <div id="header-info">
+        <h1>Teams Networking</h1>
+      <h2>CRUD operations examples(Create, Read, Update, Delete)</h2>
+      </div>
+      
+      </div>
+    </header>
+    <section id="main section">
+      <button>❌ Remove Selected</button>
+
+      Table..
+
+    </section>
+    <footer> 📃 API Docs | 👩‍💻 Source Code </footer>
   </body>
 </html>
