feat: add CSS styling for the table

--- a/src/index.html
+++ b/src/index.html
@@ -9,21 +9,62 @@
     <header>
       <div id="header-wrapper">
         <div>
-          <img src="images/Networking Team Icon.png" alt="" width="100" height="100" >
+          <img src="images/Networking Team Icon.png" alt="" width="100" height="100" />
         </div>
-      <div id="header-info">
-        <h1>Teams Networking</h1>
-      <h2>CRUD operations examples(Create, Read, Update, Delete)</h2>
-      </div>
-      
+        <div id="header-info">
+          <h1>Teams Networking</h1>
+          <h2>CRUD operations examples(Create, Read, Update, Delete)</h2>
+        </div>
       </div>
     </header>
     <section id="main section">
       <button>❌ Remove Selected</button>
-
-      Table..
-
+      <table id="teamsTable">
+        <thead>
+          <!-- Groups the table header rows -->
+          <tr>
+            <!-- Table Row -->
+            <th>Promotion</th> 
+            <!-- Represents individual header cells -->
+            <th>Members</th>
+            <th>Project Name</th>
+            <th>Project URL</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>FastTrackIT</td>
+            <!-- Table Data -->
+            <td>Nicolae Matei</td>
+            <td>Teams Networking</td>
+            <td>nmater/teams-networking</td>
+            <td>x</td>
+          </tr>
+          <tr>
+            <td>FastTrackIT</td>
+            <td>Nicolae Matei</td>
+            <td>Teams Networking</td>
+            <td>nmater/teams-networking</td>
+            <td>x</td>
+          </tr>
+          <tr>
+            <td>FastTrackIT</td>
+            <td>Nicolae Matei</td>
+            <td>Teams Networking</td>
+            <td>nmater/teams-networking</td>
+            <td>x</td>
+          </tr>
+          <tr>
+            <td>FastTrackIT</td>
+            <td>Nicolae Matei</td>
+            <td>Teams Networking</td>
+            <td>nmater/teams-networking</td>
+            <td>x</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
-    <footer> 📃 API Docs | 👩‍💻 Source Code </footer>
+    <footer>📃 API Docs | 👩‍💻 Source Code</footer>
   </body>
 </html>
