--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,12 @@
       </div>
     </header>
     <section id="main section">
-      <button>❌ Remove Selected</button>
+      <div class="tbar">
+        <button>❌ Remove Selected</button>
+        <div class="tfill"></div>
+        <input type="search" name="search" id="search" placeholder="Search..." />
+        <label for="search">🔎</label>
+      </div>
       <table id="teamsTable">
         <thead>
           <!-- Groups the table header rows -->
@@ -33,35 +38,6 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>FastTrackIT</td>
-            <!-- Table Data -->
-            <td>Nicolae Matei</td>
-            <td>Teams Networking</td>
-            <td>nmater/teams-networking</td>
-            <td>x</td>
-          </tr>
-          <tr>
-            <td>FastTrackIT</td>
-            <td>Nicolae Matei</td>
-            <td>Teams Networking</td>
-            <td>nmater/teams-networking</td>
-            <td>x</td>
-          </tr>
-          <tr>
-            <td>FastTrackIT</td>
-            <td>Nicolae Matei</td>
-            <td>Teams Networking</td>
-            <td>nmater/teams-networking</td>
-            <td>x</td>
-          </tr>
-          <tr>
-            <td>FastTrackIT</td>
-            <td>Nicolae Matei</td>
-            <td>Teams Networking</td>
-            <td>nmater/teams-networking</td>
-            <td>x</td>
-          </tr>
         </tbody>
       </table>
     </section>
