--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     </header>
     <section id="main section">
       <div class="tbar">
-        <button id="removeSelected">❌ Remove selected</button>
+        <button id="removeSelected">&#10008; Remove selected</button>
         <div class="tfill"></div>
         <input type="search" id="search" placeholder="Search..." />
         <label for="search">🔎</label>
